Inner git removed

--- a/geofence/index.html
+++ b/geofence/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyATa_bzaKqTYmStTJ4zNtgCeO12fpkpMY4"></script>
-    <script src="gmap-geofence/gmap-v3-geofence.min.js"></script>
+    <script src="gmap/gmap-v3-geofence.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
