--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <li><a href="https://laracasts.com/@sujancse" target="_blank"><i class="fab fa-laravel"></i></a></li>
             <li><a href="https://www.linkedin.com/in/st8113/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
           </ul>
+        
+        <ol>
+          <li><a href="https://github.com/sujancse" target="_blank"><i class="fa fa-2x fa-github"></i></a></li>
+            <li><a href="https://medium.com/@sujancse" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
+            <li><a href="https://laracasts.com/@sujancse" target="_blank"><i class="fab fa-laravel"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/st8113/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
+        </ol>
         </div> <!-- content -->
       </div> <!-- row -->
     </div> <!-- container -->
