--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div id="content" class="col-sm-12 col-md-12 text-center">
-          <img alt="profile image" src="assets/profile.jpg" class="img-circle img-responsive img-profile center-block"></img>
+          <img alt="profile image" src="assets/profile.jpg" class="img-circle img-responsive img-profile center-block" />
           <h1>Sujan Mahmud</h1>
           <h4>Software Engineer <a href="https://pathao.com/" target="_blank">@Pathao </a><small>Dhaka, Bangladesh</small></h4>
           <ul>
@@ -27,10 +27,8 @@
           </ul>
         
         <ol>
-          <li><a href="https://github.com/sujancse" target="_blank"><i class="fa fa-2x fa-github"></i></a></li>
-            <li><a href="https://medium.com/@sujancse" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
-            <li><a href="https://laracasts.com/@sujancse" target="_blank"><i class="fab fa-laravel"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/st8113/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
+          <li><a href="https://github.com/sujancse" target="_blank">Alumni</a></li>
+          <li><a href="https://medium.com/@sujancse" target="_blank">Geofence Tool</a></li>
         </ol>
         </div> <!-- content -->
       </div> <!-- row -->
