--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div id="content" class="col-sm-12 col-md-12 text-center">
           <img alt="profile image" src="assets/profile.jpg" class="img-circle img-responsive img-profile center-block" />
           <h1>Sujan Mahmud</h1>
-          <h4>Software Engineer <a href="https://pathao.com/" target="_blank">@Pathao </a><small>Dhaka, Bangladesh</small></h4>
+          <h4>Software Engineer <a href="http://portonics.com/" target="_blank">@Portonics </a><small>Dhaka, Bangladesh</small></h4>
           <ul>
             <li><a href="https://github.com/sujancse" target="_blank"><i class="fa fa-2x fa-github"></i></a></li>
             <li><a href="https://medium.com/@sujancse" target="_blank"><i class="fa fa-2x fa-medium"></i></a></li>
             <li><a href="https://laracasts.com/@sujancse" target="_blank"><i class="fab fa-laravel"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/st8113/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/sujancse/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a></li>
           </ul>
         </div> <!-- content -->
       </div> <!-- row -->
